# aikefu

server/: .env.example  .gitignore  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/bailian/: __init__.py  client.py
server/app/mcp_tools/: __init__.py  __main__.py  server.py
server/app/routes/: internal_workflows.py  wecom_callback.py
server/app/services/: context_store.py  group_broadcast.py  message_pipe.py
server/app/wecom/: __init__.py  api.py  contact_client.py  wxbiz_crypto.py  xml_parse.py
server/tests/: test_bailian_extract.py  test_group_template.py  test_wxbiz_crypto.py  test_xml_parse.py
