[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "qiwei-server"
version = "0.1.0"
description = "企微微信客服 ↔ 百炼智能体 中间服务 (MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "pycryptodome>=3.21.0",
    "redis>=5.2.0",
    "mcp>=1.2.0",
]

[project.scripts]
qiwei-mcp = "app.mcp_tools.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
