[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "qiwei-server"
version = "0.1.0"
description = "企微微信客服 ↔ 百炼智能体 中间服务 (MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.4",
    "pycryptodome",
    "pymysql",
    "uvicorn",
    "starlette",
    "httpx",
    "pydantic-settings",
    "apscheduler"
]

[project.scripts]
qiwei-mcp = "app.mcp_tools.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
